# MediaTailor

./: .gitignore  Cargo.toml  MediaTailor.toml
.snow/: permissions.json
.snow/notebook/: MediaTailor.json  MediaTailor_snapshots.json
.snow/skills/mediataylor-project-cognition/: SKILL.md
crates/mt-cli/: Cargo.toml
crates/mt-cli/src/: config.rs  font.rs  main.rs  parser.rs  render.rs
docs/: architecture-roadmap.md  mtc-spec-v0.1.md  mtt-spec-v0.1.md
examples/quick-poster/: README.md  demo.mtc
