[workspace]
members = ["crates/mt-cli"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Snow AI CLI"]
[workspace.dependencies]
anyhow = "1.0"
ab_glyph = "0.2"
image = { version = "0.25", default-features = true, features = ["png", "jpeg"] }
imageproc = "0.25"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

